--- a/beta-dev.properties
+++ b/beta-dev.properties
@@ -1,7 +1,7 @@
-limits-service.minimum=9
-limits-service.maximum=999
+spring.clound.loadbalancer.ribbon.enabled=false
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.instance.preferIpAdress=true
+
