--- a/service-gateway-API.yml
+++ b/service-gateway-API.yml
@@ -28,7 +28,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761//
 
 management:
   endpoint:
