--- a/limits-service.properties
+++ b/limits-service.properties
@@ -1,7 +1,7 @@
 limits-service.minimum=9
 limits-service.maximum=999
 
-eureka.client.service-url.defaultZone=http://localhost:8761/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.instance.preferIpAdress=true
