--- a/alfa-dev.yml
+++ b/alfa-dev.yml
@@ -11,7 +11,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761//
+      defaultZone: http://localhost:8761/eureka/
 
 management.health.circuitbreakers.enabled: true
 management.endpoint.health:
