--- a/alfa.yml
+++ b/alfa.yml
@@ -13,7 +13,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761//
+      defaultZone: http://localhost:8761/eureka/
 
 management.health.circuitbreakers.enabled: true
 management.endpoint.health:
