--- a/alfa.yml
+++ b/alfa.yml
@@ -3,8 +3,6 @@ spring:
     loadbalancer:
       ribbon:
         enabled: false
-server:
-  port: 8002
 
 eureka:
   instance:
@@ -15,46 +13,46 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 
-management.health.circuitbreakers.enabled: true
-management.endpoint.health:
-  enabled: true
-  show-details: always
-
-resilience4j:
-  bulkhead:
-    instances:
-      beta:
-        maxConcurrentCalls: 20
-        maxWaitDuration: 2ms
-  thread-pool-bulkhead:
-    instances:
-      beta:
-        maxThreadPoolSize: 1
-        coreThreadPoolSize: 1
-        queueCapacity: 1
-  circuitbreaker:
-    configs:
-      default:
-        registerHealthIndicator: true
-    instances:
-      beta:
-        registerHealthIndicator: true
-        ringBufferSizeInHalfOpenState: 3
-        waitDurationInOpenState: 10s
-        ringBufferSizeInClosedState: 5
-        failureRateThreshold: 50
-        recordExceptions:
-          - java.io.IOException
-          - org.springframework.web.client.HttpServer ErrorException
-          - java.util.concurrent.TimeoutException
-          - org.springframework.web.client.ResourceAccessException
-  retry:
-    instances:
-      beta:
-        maxRetryAttempts: 6
-        waitDuration: 1s
-        enableExponentialBackoff: true
-        exponentialBackoffMultiplier: 2
-        retry-exeptions:
-          - java.util.concurrent.TimeoutExeption
-          - java.net.ConnectExeption
+#management.health.circuitbreakers.enabled: true
+#management.endpoint.health:
+#  enabled: true
+#  show-details: always
+#
+#resilience4j:
+#  bulkhead:
+#    instances:
+#      beta:
+#        maxConcurrentCalls: 20
+#        maxWaitDuration: 2ms
+#  thread-pool-bulkhead:
+#    instances:
+#      beta:
+#        maxThreadPoolSize: 1
+#        coreThreadPoolSize: 1
+#        queueCapacity: 1
+#  circuitbreaker:
+#    configs:
+#      default:
+#        registerHealthIndicator: true
+#    instances:
+#      beta:
+#        registerHealthIndicator: true
+#        ringBufferSizeInHalfOpenState: 3
+#        waitDurationInOpenState: 10s
+#        ringBufferSizeInClosedState: 5
+#        failureRateThreshold: 50
+#        recordExceptions:
+#          - java.io.IOException
+#          - org.springframework.web.client.HttpServer ErrorException
+#          - java.util.concurrent.TimeoutException
+#          - org.springframework.web.client.ResourceAccessException
+#  retry:
+#    instances:
+#      beta:
+#        maxRetryAttempts: 6
+#        waitDuration: 1s
+#        enableExponentialBackoff: true
+#        exponentialBackoffMultiplier: 2
+#        retry-exeptions:
+#          - java.util.concurrent.TimeoutExeption
+#          - java.net.ConnectExeption
