--- a/serveless.properties
+++ b/serveless.properties
@@ -1,5 +1,7 @@
-spring.application.name=serveless
-server.port=8005
+spring.clound.loadbalancer.ribbon.enabled=false
 
-spring.config.import=configserver:http://localhost:8888
-spring.profiles.active=dev
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.instance.preferIpAdress=true
+
