--- a/service-gateway-API.yml
+++ b/service-gateway-API.yml
@@ -1,4 +1,14 @@
 spring:
+
+  zipkin:
+    enabled: true
+    service.name: my-service
+    sender.type: web
+    base-url: http://localhost:9411
+  sleuth:
+    enabled: true
+    sampler:
+      probability: 1.0
   cloud:
     loadbalancer:
       ribbon:
