--- a/service-gateway-API.yml
+++ b/service-gateway-API.yml
@@ -2,13 +2,12 @@ spring:
 
   zipkin:
     enabled: true
-    service.name: my-service
     sender.type: web
     base-url: http://localhost:9411
   sleuth:
     enabled: true
     sampler:
-      probability: 1.0
+      percentage: 1.0
   cloud:
     loadbalancer:
       ribbon:
