--- a/service-gateway-API.yml
+++ b/service-gateway-API.yml
@@ -7,7 +7,7 @@ spring:
   sleuth:
     enabled: true
     sampler:
-      probability: 1.0
+      percentage: 1.0
   cloud:
     loadbalancer:
       ribbon:
